[tool.poetry]
name = "rlintro"
version = "0.1.0"
description = "My code for exercises in Reinforcement Learning: An Introduction"
authors = ["Adam Page <pageadj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
